# Cpp-Core

./: .gitignore  CMakeLists.txt  Makefile  README.md  UnitTests.h  WORKSPACE  check_list.md  test_extra_long_factorial  test_heap_sort  test_merge_sort
.github/workflows/: makefile.yml
Algorithms/: Makefile
Algorithms/BFS/: input.txt  main.cpp
Algorithms/BinarySearch/: main.cpp
Algorithms/BoyerMoore/: main.cpp
Algorithms/HeapSort/: HeapSort.h  main  main.cpp  test_heap_sort.cpp
Algorithms/MergeSort/: MergeSort.h  input.txt  main.cpp  merge_sort.cpp  merge_sort.h  test_merge_sort.cpp
Algorithms/MergeSortExternal/: main.cpp
Algorithms/MergeSortExternal/merge-k-sorted-arrays/: solution1.cpp
Algorithms/Quick Sort/: main.cpp
Algorithms/QuickSort/: main.cpp  quick_sort.cpp  quick_sort.h
Basics/Goto xy/: main.cpp
Basics/HeaderFiles/: README.txt  main.cpp
Basics/LambdaExpression/: LambdaExpression.cpp
Basics/OOP/: mai.cpp
Callback Function/: main.cpp
Data Structure and Algorithms/Binary Search/: main.cpp
Data Structure and Algorithms/Binary Tree/: input.txt.ehiz  main.cpp  main.cpp.ehiz
Data Structure and Algorithms/BinaryTree/: BinaryTree.h  solution.cpp
Data Structure and Algorithms/Boyer Moore/: Bad_Character_Heuristic.cpp.ehiz  Bad_Character_Heuristic.exe.ehiz  READNE.txt.ehiz  main.cpp
Data Structure and Algorithms/DFS/: input.txt.ehiz  main.cpp.ehiz
Data Structure and Algorithms/DFS and BFS in Graph/: input.txt  main.cpp
Data Structure and Algorithms/Dijkstra/: main.cpp
Data Structure and Algorithms/Kruskal MST/: input.txt  main.cpp
Data Structure and Algorithms/Linked List/: main.cpp  main.cpp.ehiz  main.exe.ehiz
Data Structure and Algorithms/Merge Sort/: main.cpp
Data Structure and Algorithms/Merge-Sort-External/: MergeSort.h  MinHeap.h  main.cpp
Data Structure and Algorithms/Quick Sort/: main.cpp
Data Structure and Algorithms/Read-Large-File/: FileEngine.h  README.md  StringEngine.h  main.cpp
Data Structure and Algorithms/Test/: main.cpp
DataStructure/: Makefile
DataStructure/BFS(Breadth First Search)/: main.cpp
DataStructure/BinaryTree/: BinaryTree.h  binary_tree.h  main.cpp  solution.cpp
DataStructure/HashTable/: Mrroot501HashTable.h  main.cpp  mrroot501_hash_table.cpp  mrroot501_hash_table.h
DataStructure/LinkedList/: linked_list.cpp  linked_list.h  main.cpp
DataStructure/SegmentTree/: SegmentTree.h  main.cpp  segment_tree.cpp  segment_tree.h
DataStructure/Stack/: main.cpp  stack.cpp  stack.h
DynamicProgramming/: Makefile
Goto xy/: main.cpp
Header Files/: Libs.cpp
ProblemSolving/: Makefile
ProblemSolving/ExtraLongFactorial/: CMakeLists.txt  extra_long_factorial.cpp  extra_long_factorial.h  main  main.cpp  test_extra_long_factorial.cpp
ProblemSolving/FindLargestValueInTreeRow/: main.cpp
ProblemSolving/HanoiTower/: main.cpp
ProblemSolving/LongestComonSubsequence/: main.cpp
ProblemSolving/LongestPalindromicSubstring/: main.cpp
ProblemSolving/MaximumSumSubarray/: main.cpp
ProblemSolving/MergeKSortedArrays/: main.cpp  solution1.cpp
ProblemSolving/MergeTwoSortedArrays/: main.cpp
ProblemSolving/RangeSumQueriesWithoutUpdates/: main.cpp
ProblemSolving/ShortestPathInBinaryMatrix/: main.cpp
ProblemSolving/SmallestSubarrayWithKDistinctNumbers/: input.txt  main.cpp
ProblemSolving/merge-k-sorted-arrays/: solution2.cpp
Problems/Extra Long Factorials/: main.cpp.ehiz
Problems/Find Longest Subarray By Sum/: input.txt.ehiz  main.cpp.ehiz  problem.txt.ehiz
Problems/Find Way In Matrix/: input.txt.ehiz  main.cpp.ehiz
Problems/Find-largest-value-in-tree-row/: main.cpp  solution.cpp
Problems/First Duplicate/: main.cpp.ehiz
Problems/First Non-Repeating Character/: input.txt.ehiz  main.cpp.ehiz  readme.txt.ehiz
Problems/Longest Palindromic Substring/: Problem.txt.ehiz  input.txt.ehiz  main.cpp.ehiz
Problems/Longest-Palindromic-Substring/: solution
Problems/Maximum Sum Subarray/: input.txt.ehiz  main.cpp  main.cpp.ehiz  main.exe.ehiz
Problems/Radio Transmitters/: input.txt.ehiz  main  main.cpp  main.cpp.ehiz  main.exe.ehiz
Problems/Read-Large-File/: .gitignore  StringEngine.h  main.cpp
Problems/Rotate Image/: input.txt.ehiz  main.cpp  main.cpp.ehiz
Problems/Snake Game/: main.cpp.ehiz
Problems/Sorted Square Array/: input.txt.ehiz  main.cpp.ehiz  problem.txt.ehiz
Scheduling Algorithms/: README.txt
Test/: input.txt  main.cpp
__test__/: input.txt  solution  solution.cpp
ci/: ci.sh
config/: CMakeLists.txt  Makefile
configurations/: CMakeLists.txt  Makefile  MakefileUtils  repositories.bzl
src/Algorithms/: BUILD
src/Algorithms/DFS/: input.txt  main.cpp
src/Algorithms/Dijkstra/: main.cpp
src/Algorithms/HeapSort/: heap_sort.cpp  heap_sort.h  main.cpp  test_heap_sort.cpp
src/Algorithms/KruskalMST/: main.cpp
src/Algorithms/MergeSort/: main.cpp
src/Algorithms/MergeSortExternal/: main.cpp  test_merge_sort_external.cpp
src/Algorithms/QuickSort/: test_quick_sort.cpp
src/Basics/HeaderFiles/: Libs.h
src/Basics/HelloWorld/: main.cpp
src/Basics/LambdaExpression/: Makefile
src/DataStructure/: BUILD
src/DataStructure/BinaryTree/: binary_tree.cpp  input.txt  main.cpp
src/DataStructure/HashTable/: main.cpp
src/DataStructure/LinkedList/: doubly_linked_list.cpp  doubly_linked_list.h  linked_list.cpp  linked_list.h  ll_node.cpp  ll_node.h  main.cpp  test_doubly_linked_list.cpp  test_linked_list.cpp
src/DataStructure/MessageQueue/: message.cpp  message_queue.cpp  message_queue.h  message_queue_test.cpp  messga_queue.h
src/DataStructure/Queue/: main.cpp  message.h  queue.cpp  queue.h  queue_test.cpp
src/DataStructure/SegmentTree/: main.cpp
src/DataStructure/Stack/: main.cpp  stack.cpp  stack.h
src/DynamicProgramming/: count_paths.cpp  fibonacci.cpp
src/ProblemSolving/: BUILD
src/ProblemSolving/FindLargestValueInTreeRow/: main.cpp
src/ProblemSolving/MergeKSortedArrays/: main.cpp
src/ProblemSolving/RangeSumQueriesWithoutUpdates/: main.cpp
src/ProblemSolving/RotateImage/: main.cpp
src/ProblemSolving/ShortestPathInBinaryMatrix/: main.cpp
(+4 files in other folders)
